data ingestion completed

--- a/notebook/mongo_db.ipynb
+++ b/notebook/mongo_db.ipynb
@@ -13,10 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f93fd254",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17880\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -226,13 +233,14 @@
        "4           0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"fake_job_postings.csv\")\n",
+    "print(len(df))\n",
     "df.head()"
    ]
   },
