--- a/notebook/testing.ipynb
+++ b/notebook/testing.ipynb
@@ -254,13 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cd1c38a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "train, test = train_test_split(df, test_size=0.2)"
+    "train = pd.read_csv(\"/home/prateek/Projects/Fake_Job_Post_Detection/artifact/07_14_2025_14_26_57/data_ingestion/ingested/train.csv\")\n",
+    "test = pd.read_csv(\"/home/prateek/Projects/Fake_Job_Post_Detection/artifact/07_14_2025_14_26_57/data_ingestion/ingested/test.csv\")"
    ]
   },
   {
